_test_out.txt
  File "<string>", line 23
    return MockResp('{\
                       ^
SyntaxError: EOL while scanning string literal
